# psst

./: .gitignore  Cargo.toml  spotify-downloader.sh
.github/workflows/: build.yml
psst-cli/: Cargo.toml
psst-cli/src/: main.rs
psst-core/src/: lib.rs  metadata.rs
psst-core/src/audio/: decode.rs
psst-core/src/downloader/: file.rs  item.rs  mod.rs
spotify-ripper/: Cargo.toml  Dockerfile  Makefile  one_track.json  sqlx-data.json  test_pubsub_push.json  tracks.json
spotify-ripper/fixtures/: commands.md
spotify-ripper/src/: main.rs
