[package]
name = "spotify-ripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# psst-core = { path = "../psst-core" }

# Spotify
rspotify = "0.11.5"
psst-core = { git = "https://github.com/apestel/psst", branch = "spotify-ripper" }

# Web service
axum = "0.5.17"
http = "0.2.8"
axum-tracing-opentelemetry = { version="0.5.1", features = ["tracer", "otlp"] }
opentelemetry = "0.18.0"
opentelemetry-stackdriver = { version = "0.15.0", default_features = false, features = ["tls-native-roots", "gcp_auth"] }
opentelemetry_sdk = "0.18.0"
gcp_auth = "0.7.4"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["registry"] } 
tracing = "0.1.37"


tokio = {version="1.21.2", features = ["full"] }
serde = "1.0.147"
serde_json = "1.0.87"

# Google Cloud Platform
google-cloud-storage = "0.5.1"
google-cloud-pubsub = "0.9.0"
google-cloud-googleapis = "0.6.0"

# Utils
log = "0.4.17"
env_logger = "0.9.1"
base64 = "0.13.1"
thiserror = "1.0.37"
anyhow = { version="1.0.66", features=["backtrace"] }


